tests/neg/i14432d.check
-- Error: tests/neg/i14432d.scala:17:45 --------------------------------------------------------------------------------
17 |    val mFoo = summon[Mirror.Of[example.Foo]] // error
   |                                             ^
   |No given instance of type deriving.Mirror.Of[example.Foo] was found for parameter x of method summon in object Predef. Failed to synthesize implicit of type deriving.Mirror.Of[example.Foo]: Constructor of class Foo is unnaccessible from the calling scope.
